--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "pandemic-simulator",
+  "name": "new",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SThompsonChicago/pandemic-simulator.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SThompsonChicago/pandemic-simulator/issues"
-  },
-  "homepage": "https://github.com/SThompsonChicago/pandemic-simulator#readme",
+  "keywords": [],
+  "main": "src/index.js",
   "dependencies": {
-    "mathjs": "^10.0.0"
-  }
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.2",
+    "react-grid-heatmap": "1.1.0",
+    "mathjs": "^10.0.0",
+    "react-spring": "7.2.8"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
