--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "new",
+  "name": "pandemic-simulator",
+  "homepage": "https://SThompsonChicago.github.io/pandemic-simulator",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -8,16 +9,19 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
+    "mathjs": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2",
     "react-grid-heatmap": "1.1.0",
-    "mathjs": "^10.0.0",
-    "react-spring": "7.2.8"
+    "react-scripts": "5.0.0",
+    "react-spring": "7.2.8",
+    "web-vitals": "^2.1.2"
   },
   "devDependencies": {},
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
