--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^3.2.3",
     "mathjs": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-grid-heatmap": "1.1.0",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "react-spring": "7.2.8",
     "web-vitals": "^2.1.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
